syntax = "proto3";

package api.v1;

option java_package = "tools.teal.pulsar.ui.api";

import "google/protobuf/timestamp.proto";

message MessageId {
  int64 ledger_id = 1;
  int64 entry_id = 2;
  int32 batch_id = 3;
  int32 partition_idx = 4;
}

message Message {
  map<string, string> properties = 1;
  bytes data = 2;
  int64 size = 3;
  string value = 4; // JSON string
  // MessageId messageId = 5;

  google.protobuf.Timestamp publish_time = 6;
  google.protobuf.Timestamp event_time = 7;
  optional double broker_publish_time = 22;

  bytes message_id = 30;
  double sequence_id = 8;
  string producer_name = 9;
  string key = 10;
  string ordering_key = 11;
  string topic = 12;
  int32 redelivery_count = 13;
  bytes schema_version = 14;

  bool is_replicated = 20;
  string replicated_from = 21;
}

message ReadMessagesRequest {
  string topic = 1;
  string subscription_id = 2;
}

message ReadMessagesResponse {
  repeated Message messages = 1;
}

service TopicService {
  rpc ReadMessages(ReadMessagesRequest) returns (stream ReadMessagesResponse);
}
